welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: not found: value num
      if (nums(k+2)<=(num(k)+1) && (nums(k+2)>=nums(k)-3)){
                      ^